# PCFixAI

./: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/chat/: ChatInterface.tsx
src/components/dashboard/: AgentFeed.tsx  Dashboard.tsx  FindingsList.tsx  HistoryView.tsx  ScanReview.tsx  SettingsView.tsx
src/components/panel/: AutomationTree.tsx  ConsoleLog.tsx  LiveMetrics.tsx  StateLog.tsx  SystemPanel.tsx
src/components/shared/: GlobalProgressBar.tsx  OllamaBanner.tsx  PrivilegeBanner.tsx  Sidebar.tsx  TitleBar.tsx
src/components/toolkit/: DriverBackup.tsx  ProcessManager.tsx  ServiceManager.tsx  SfcManager.tsx  SpeedTest.tsx  StartupManager.tsx  ToolkitView.tsx  UninstallManager.tsx  WingetManager.tsx
src/components/ui/: button.tsx  card.tsx
src/hooks/: useLocalAI.ts  useTauriEvents.ts
src/store/: index.ts
src/styles/: globals.css
