[package]
name    = "PCFixAI"
version = "0.1.0"
edition = "2021"

[lib]
name       = "PCFixAI_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "PCFixAI"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                = { version = "2", features = [] }
tauri-plugin-shell   = "2"
tauri-plugin-process = "2"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
tokio                = { version = "1", features = ["full"] }
chrono               = { version = "0.4", features = ["serde"] }
uuid                 = { version = "1", features = ["v4"] }
anyhow               = "1"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
tauri-plugin-http = "2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_NetworkManagement_IpHelper",
  "Win32_System_Registry",
] }

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
